--- a/www/plugins/demo/core/controllers/inboundapicontroller/reorder.htm
+++ b/www/plugins/demo/core/controllers/inboundapicontroller/reorder.htm
@@ -1,6 +1,6 @@
 <?php Block::put('breadcrumb') ?>
     <ul>
-        <li><a href="<?= Backend::url('demo/core/inboundapi') ?>">InboundApi</a></li>
+        <li><a href="<?= Backend::url('demo/core/inboundapicontroller') ?>">InboundApi</a></li>
         <li><?= e($this->pageTitle) ?></li>
     </ul>
 <?php Block::endPut() ?>
