--- a/www/plugins/demo/report/controllers/dashboardcontroller/_dashboard_renderer.htm
+++ b/www/plugins/demo/report/controllers/dashboardcontroller/_dashboard_renderer.htm
@@ -5,58 +5,71 @@
 <?php $this->addCss('/plugins/demo/core/controllers/baseenginecontroller/assets/css/engine.css') ?>
 <?php $this->addJs('/plugins/demo/core/controllers/baseenginecontroller/assets/js/engine.js') ?>
 <?php $this->addJs('/plugins/demo/core/controllers/baseenginecontroller/assets/js/engine.ui.js') ?>
-<?php if ($preview === true) { ?>
-    <a href="../render/<?= $dashboard->id ?>" style="margin: 0;auto;">View</a>
+<?php if (empty($context) || $context === 'preview') { ?>
+    <!--<a href="../render/<?/*= $dashboard->id */?>" style="margin: 0;auto;">View</a>-->
 <?php } ?>
-<div id="dashboard-container-<?= $dashboard->id ?>" style="height: 100%;width: 100%;" class="dashboard-container">
+<div id="dashboard-container-<?= $dashboard->id ?>" style="height: 100%;width: 100%;"
+     class="dashboard-container">
+    <div class="d-flex justify-content-between align-items-center flex-wrap grid-margin dashboard-header"
+         style="padding-left: 10px;">
+        <div style="width: 100%;" class="mb-2">
+            <h4 class="mb-3 mb-md-0 dashboard-title"><?= $dashboard->name ?></h4>
+        </div>
+        <div class="text-muted mb-2 dashboard-description">
+            <?= $dashboard->description ?>
+        </div>
+    </div>
     <div class="grid-stack">
         <?php
-        foreach ($dashboard->config_widgets as $config) {
+        $widgets = $this->getWidgets($dashboard);
+        $widgetController = new \Demo\Report\Controllers\WidgetController();
+        foreach ($widgets as $widget) {
+            $config = $widget->config;
             ?>
+
             <div class="grid-stack-item" data-gs-x="<?= $config['x'] ?>" data-gs-y="<?= $config['y'] ?>"
                  data-gs-width="<?= $config['width'] ?>" data-gs-height="<?= $config['height'] ?>">
                 <div class="grid-stack-item-content">
                     <?php
-                    $widgetController = new \Demo\Report\Controllers\WidgetController();
-                    $widget = \Demo\Report\Models\Widget::where('id', $config['widget'])->first();
                     $widgetController->addAssets($this, $widget);
                     ?>
                     <?= $widgetController->render($widget) ?>
                 </div>
             </div>
-
             <?php
         }
         ?>
     </div>
 </div>
-<div id="ReportContainer-container-toolbar" class="dashboard-toolbar">
-    <div class="dropdown dropup">
-        <a href="javascript:;" class="manage-widgets" data-toggle="dropdown">
-            <i class="icon-cogs"></i> Manage widgets </a>
+<?php if ($context === 'preview') { ?>
+    <div id="ReportContainer-container-toolbar" class="dashboard-toolbar">
+        <div class="dropdown dropup">
+            <a href="javascript:;" class="manage-widgets" data-toggle="dropdown">
+                <i class="icon-cogs"></i> Manage widgets </a>
 
-        <ul class="dropdown-menu" role="menu" data-dropdown-title="Manage dashboard">
-            <li role="presentation">
-                <a role="menuitem" href="javascript:;" data-control="popup"
-                   data-handler="onLoadAddPopup" class="oc-icon-plus" tabindex="-1">
-                    Add widget </a>
-            </li>
-            <li role="separator" class="divider"></li>
-            <li role="presentation">
-                <a role="menuitem" href="javascript:;" class="oc-icon-floppy-o save-dashboard"
-                   data-hotkey="ctrl+enter, cmd+enter">
-                    Save </a>
-            </li>
-            <li role="presentation">
-                <a role="menuitem" href="javascript:;"
-                   data-request-success="$(window).trigger('oc.reportWidgetRefresh')"
-                   data-request="onResetWidgets" data-request-confirm="Reset layout back to default?"
-                   class="oc-icon-repeat" tabindex="-1">
-                    Reset layout </a>
-            </li>
-        </ul>
+            <ul class="dropdown-menu" role="menu" data-dropdown-title="Manage dashboard">
+                <li role="presentation">
+                    <a role="menuitem" href="javascript:;" data-control="popup"
+                       data-handler="onLoadAddPopup" class="oc-icon-plus" tabindex="-1">
+                        Add widget </a>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li role="presentation">
+                    <a role="menuitem" href="javascript:;" class="oc-icon-floppy-o save-dashboard"
+                       data-hotkey="ctrl+enter, cmd+enter">
+                        Save </a>
+                </li>
+                <li role="presentation">
+                    <a role="menuitem" href="javascript:;"
+                       data-request-success="$(window).trigger('oc.reportWidgetRefresh')"
+                       data-request="onResetWidgets" data-request-confirm="Reset layout back to default?"
+                       class="oc-icon-repeat" tabindex="-1">
+                        Reset layout </a>
+                </li>
+            </ul>
+        </div>
     </div>
-</div>
+<?php } ?>
 <style>
     .grid-stack {
         width: 100%;
@@ -64,16 +77,12 @@
     }
 
     .dashboard-toolbar .manage-widgets {
-        display: inline-block;
-        color: #bcc3c7;
-        padding: 10px 15px;
-        font-size: 14px;
-        font-weight: 400;
-        border: 1px dashed #bcc3c7;
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
-        border-radius: 3px;
-        margin-left: 5px;
+        display: inline-block
+        border: 1px dashed;
+        position: fixed;
+        top: 75px;
+        right: 25px;
+        padding: 10px;
     }
 
     .close-widget {
@@ -81,20 +90,32 @@
         z-index: 9999;
     }
 
-    .grid-stack > .grid-stack-item > .grid-stack-item-content {
+    /*.grid-stack > .grid-stack-item > .grid-stack-item-content {
         overflow: hidden;
         background-color: white;
-        /*padding: 10px 10px 10px 10px;*/
+        padding: 10px 10px 10px 10px;
         box-shadow: 0 8px 16px -8px rgba(0, 0, 0, 0.4);
         margin: 5px 5px 5px 5px;
+    }*/
+    .grid-stack > .grid-stack-item > .grid-stack-item-content {
+        overflow: hidden;
     }
 
     .grid-stack > .grid-stack-item > .ui-resizable-se, .grid-stack > .grid-stack-item > .ui-resizable-sw {
         background-image: none;
     }
+
+    .page-content > .row > .stretch-card > .card {
+        background-color: transparent;
+        box-shadow: none;
+        -webkit-box-shadow: none;
+        -moz-box-shadow: unset;
+        -ms-box-shadow: unset;
+        border: none;
+    }
 </style>
 <script>
-    var dashboard = new Dashboard('<?= $dashboard->id ?>');
+    var dashboard = new Dashboard('<?= $dashboard->id ?>', '<?=$context?>');
     dashboard.render();
     $('.dashboard-toolbar .save-dashboard').click(function () {
         dashboard.save();
